--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,4 @@
+* Move repository to vanrees.org (or github or something).
+
 * Deploy at new.maurits.vanrees.org for testing and seeing if it plays
   nice with Apache.
