--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog for maurits-site-xdv
 1.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Updated bootstrap, buildout, setuptools, so we can get running again.  [maurits]
 
 
 1.2 (2014-01-12)
