--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Changelog for maurits-site-xdv
 1.3 (unreleased)
 ----------------
 
+- Copyright 2004-2016.  [maurits]
+
 - Updated bootstrap, buildout, setuptools, so we can get running again.  [maurits]
 
 
