Back to development: 1.4
[ci skip]

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog for maurits-site-xdv
 ==============================
 
+1.4 (unreleased)
+----------------
+
+- Nothing changed yet.
+
+
 1.3 (2016-05-12)
 ----------------
 
