--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog for maurits-site-xdv
 1.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Copyright 2017.  [maurits]
 
 
 1.3 (2016-05-12)
