--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog for maurits-site-xdv
 ==============================
 
+1.4.1 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 1.4 (2017-05-29)
 ----------------
 
