--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog for maurits-site-xdv
 1.4.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Use ``gtag.js`` with ``anonymize_ip``.  [maurits]
 
 
 1.4.2 (2017-11-29)
